:sparkles: reconstruct model and init trader

--- a/SPGCL-main/CONFIG/CSI500.conf
+++ b/SPGCL-main/CONFIG/CSI500.conf
@@ -25,15 +25,16 @@ gamma_1 = 10
 gamma_2 = 20
 eta = 0.3
 Q = 0.3
-ini_seq_len = 12
-seq_len = 16
-gap_len = 16
-pre_len = 12
+ini_seq_len = 30
+seq_len = 1
+gap_len = 10
+pre_len = 1
+select_nums = 10
 nu_samples = 200
 
 [save]
-acc_threshold = 0.6
-acc_real_threshold = 5
+acc_threshold = 0.1
+acc_real_threshold = 0.1
 
 [log]
 log_freq = 20
